tests/fixtures/invalid/err001_unknown_catch_failure_type.rex
expect {
  observe page "https://example.com" as $page
} otherwise UnknownFailure {
  skip
} otherwise * {
  skip
}
